--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,7 @@ h1 {
 }
 
 body{
-	background: #80A437;
+	background: url("../img/bg.png") repeat;
 }
 
-/* I like the color #8E2F8C */
+/* I like the color #8E2F8C and #80A437  */
