--- a/css/styles.css
+++ b/css/styles.css
@@ -29,7 +29,14 @@ h3 {
 
 	border: 10px solid #80A437;
 
+
+a {
+	text-decoration:none;
+	color: #000;
+}
+
+
+
 ul {
 	list-style:none;
-text-decoration:none;
 }
