--- a/css/styles.css
+++ b/css/styles.css
@@ -27,6 +27,16 @@ h2 {
 	font-position: center;
 }
 
+h3 {
+
+	color: #8A2626;
+	font-family: 'Bitter', serif;
+	width: 200px;
+	padding: 10px;
+	margin: 0px 0px 0px 100px;
+	font-position: center;
+}
+
 
 a:link {
 	list-style:none;
@@ -43,4 +53,8 @@ padding: 20px 0px 20px 20px;
 
 #box {
 	background:;
+}
+
+#info {
+padding: 10px 10px 10px 10px;
 }
