began making a footer

--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,7 @@ h1 {
 }
 
 body{
-	background: #A8D3F3;
+	background: #4B6987;
 }
 
 /* I like the color #8E2F8C and #80A437  */
@@ -52,7 +52,7 @@ padding: 20px 0px 20px 20px;
 }
 
 #box {
-	background:;
+	background:#A8D3F3;
 }
 
 #info {
