--- a/css/styles.css
+++ b/css/styles.css
@@ -48,8 +48,13 @@ ul {
 }
 
 #me { 
-padding: 20px 0px 20px 20px;
+	padding: 20px 0px 20px 20px;
 }
+
+#me img {
+		width: 550px;
+}
+
 
 #box {
 	background:#A8D3F3;
