--- a/css/styles.css
+++ b/css/styles.css
@@ -95,6 +95,12 @@ ul li {
 padding: 10px 10px 10px 10px;
 }
 
+#special img {
+	padding-left:63px;
+	size: 500px;
+}
+
+
 footer {
 	text-align: center;
 	opacity: 50%; 
@@ -105,3 +111,4 @@ footer {
 p footer {
 	color: #8A2626;
 }
+
