--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,7 @@ h1 {
 	padding: 10px 0px 10px 10px;
 	background-color: #A8A8B2;
 	margin: 0px 0px 0px 0px;
+	border-bottom: 10px dashed #A8D3F3;
 }
 
 
@@ -102,6 +103,7 @@ footer {
 	opacity: 50%; 
 	background-color: #A8A8B2;
 	color: #8A2626;
+	border-top: 10px dashed #A8D3F3;
 }
 
 p footer {
@@ -114,4 +116,16 @@ p footer {
 
 .contact {
 	padding-top: 50px;
+}
+
+blockquote {
+	position: absolute;
+	top: 0;
+	right: 200px;
+	font-family: 'Bitter', serif;
+	font-style: italic;
+	font-size: 24px;
+	color: #4B6987;
+	font-weight: 50;
+	opacity: 0.7;
 }
