--- a/css/styles.css
+++ b/css/styles.css
@@ -24,8 +24,9 @@ header {
 h2 {
 	color: #8A2626;
 	font-family: 'Bitter', serif;
-	width: 200px;;
-	margin: 0px 0px 0px 80px;
+	width: 200px;
+	margin: 0px 0px 0px 90px;
+	padding-top: 10px;
 	font-position: center;
 }
 
@@ -45,6 +46,7 @@ p {
 	font-family: 'Oxygen', sans-serif;
 	font-size: 18px;
 	color: #4B6987;
+	padding-left: 25px; 
 }
 
 a:link {
@@ -133,6 +135,3 @@ blockquote {
 	opacity: 0.7;
 }
 
-#dashbox {
-	border-left: 2px dashed #A8A8B2;
-}
