--- a/css/styles.css
+++ b/css/styles.css
@@ -41,6 +41,16 @@ h3 {
 	font-position: center;
 }
 
+h4 {
+	color: #8A2626;
+	font-family: 'Bitter', serif;
+	width: 200px;
+	padding: 10px;
+	margin: 0px 0px 0px 50px;
+	font-position: center;
+}
+
+
 
 p {
 	font-family: 'Oxygen', sans-serif;
@@ -118,9 +128,8 @@ p footer {
 .visit {
 	padding-top: 10px;
 }
-
 .contact {
-	padding-top: 50px;
+	margin-left: 40px;
 }
 
 blockquote {
@@ -135,3 +144,8 @@ blockquote {
 	opacity: 0.7;
 }
 
+#dashbox {
+	border: 5px dashed #4B6987;	
+	margin-left: 15px;
+	margin-top:40px;
+}
